# griffe-generics

./: README.md  requirements.txt  setup.cfg
.github/workflows/: publish.yml
griffe_generics/: __init__.py  extension.py  inspector.py  models.py  predicates.py  transforms.py  traversal.py  types.py  utils.py
tests/: test_extension.py  utils.py
