[metadata]
name = griffe-generics
version = attr: griffe_generics.__version__
description = A Griffe extension that resolves generic type parameters as bound types in subclasses
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
url = https://github.com/jonghwanhyeon/griffe-generics
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    griffe
    generics
    generic
    typing
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    griffe
    typing-extensions
python_requires = >=3.8
packages = find:

[options.extras_require]
tests =
    pytest
dev =
    %(tests)s
    mypy
    rich
    ruff